finalisation responsive design rubrique mines et carrières

--- a/installation-mines.html
+++ b/installation-mines.html
@@ -12,33 +12,72 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     
-    <!-- PAGE -->
     <div id="el-page">
 
-        <!-- HEADER PAGE -->
         <header id="el-header-page">
-            <a href="" class="el-logo">
-                <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
-            </a>
-            <ul class="el-container">
-                <li>
-                    <a href="" class="el-center-box">
-                        <i class="fas fa-search"></i>
-                    </a>
-                </li>
-                <li>
-                    <button class="el-center-box">
-                        <i class="fas fa-bars"></i>
-                    </button>
-                </li>
-            </ul>
+            <section id="el-top" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <div class="el-container">
+                            <ul class="el-langages">
+                                <li><a href=""><img src="https://flagcdn.com/ma.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/gb.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/fr.svg" alt=""></a></li>
+                            </ul>
+                            <ul class="el-social-network">
+                                <li><a href="https://www.facebook.com/" class="el-center-box"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.linkedin.com/" class="el-center-box"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/" class="el-center-box"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="mailto:alamitec@contact.ma" class="el-center-box"><i class="fab fa-vk"></i></a></li>
+                            </ul>
+                        </div>
+                        <ul class="el-container-two">
+                            <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-globe-africa"></i>contact@alamitec.ma</a></li>
+                            <li><a href="tel:+212522537340"><i class="fas fa-phone"></i>(+212) 522 537 340</a></li>
+                            <li><a href="tel:+212522537341"><i class="fas fa-phone"></i>(+212) 522 537 341</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section id="el-bottom" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <a href="" class="el-logo">
+                            <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
+                        </a>
+                        <ul class="el-container">
+                            <li>
+                                <a href="" class="el-center-box">
+                                    <i class="fas fa-search"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <button class="el-center-box">
+                                    <i class="fas fa-bars"></i>
+                                </button>
+                            </li>
+                        </ul>
+                        <nav>
+                            <ul id="el-menu-desktop">
+                                <li><a href="" class="el-menu-level-one">accueil</a></li>
+                                <li><a href="" class="el-menu-level-one">société<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">mines et carrières<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">machines<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">prestations<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">pièces de rechange</a></li>
+                                <li><a href="" class="el-menu-level-one">contact</a></li>
+                                <li><a href="" class="el-center-box el-search"><i class="fas fa-search"></i></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </section>
         </header>
-        <!-- FIN HEADER PAGE -->
 
-        <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
@@ -57,50 +96,56 @@
                 </div>
             </div>
         </section>
-        <!-- FIN TITLE OVERLAY -->
 
-        <!-- BANNER CTA -->
-        <section class="el-banner-cta" class="el-center-box">
+        <section id="el-presentation" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
+                <div class="el-grid-zone">
+                    <article class="el-zone-left">
+                        <div class="el-block-one">
+                            <h2 class="el-title">carrières et mines</h2>
+                            <ul class="el-container-nav">
+                                <li>
+                                    <div class="el-link-category"><a href="">installation clé en main</a></div>
+                                </li>
+                                <li>
+                                    <div class="el-active el-link-category"><a href="">installation des mines</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="el-block-two">
+                            <h2 class="el-title">catalogue alamitec</h2>
+                            <div class="el-container-nav">
+                                <a href="./assets/Catalogue-final-alamitec.pdf"><i class="fas fa-file-pdf"></i>download.pdf</a>
+                            </div>
+                        </div>
+                        <div class="el-block-three">
+                            <h2 class="el-title">contact</h2>
+                            <ul>
+                                <li><a href=""><i class="fas fa-map-marker"></i>Quartier industriel SAPINO Lot n°72- Nouaceur, Casablanca-Maroc</a></li>
+                                <li><a href="tel:+212522537340"><i class="fas fa-phone"></i> +212 522 53 73 40/41</a></li>
+                                <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-paper-plane"></i>contact@alamitec.ma</a></li>
+                                <li><a href=""><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="el-zone-right">
+                        <h2 class="el-title">development & mining projects</h2>
+                        <p class="el-paragraphe">
+                            ALAMITEC compte depuis 20ans sur la compétence, 
+                            la créativité et le professionnalisme de ses équipes d’ingénieurs et de techniciens pour vous accompagner dans l’étude et la réalisation de tous les projets de développement miniers et industriels. 
+                            Nous comptons également sur une collaboration étroite avec un large réseau d’experts externes pour certains projets.
+                        </p>
+                        <p class="el-paragraphe">
+                            <strong>DANS LA POURSUITE D’OR</strong> Au-delà du Maroc, <strong>ALAMITEC</strong> a entamé une expansion sur le continent Africain, en commençant par la Mauritanie Soudan et prochainement en Guinée…. Avec des installations partiels jusqu’à des solutions clé en main.
+                        </p>
+                        <p class="el-paragraphe">
+                            Avec ses partenaires et ses experts les plus expérimentés au Maroc, nous avons commencer une vision d’indépendance pour la fabrication et la conception de nos solutions avec un prix et une qualité très Compétitifs.
+                        </p>
+                    </article>
                 </div>
             </div>
         </section>
-        <!-- FIN BANNER CTA -->
 
-        <!-- INSTALLATION CLE EN MAIN -->
-        <section id="el-installation-cle-en-main" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-container">
-                    <img src="./assets/images/web-con-1-1024x138.jpg" alt="">
-                    <div class="el-grid">
-                        <article class="el-left">
-                            <p class="el-paragraphe">
-                                ALAMITEC compte depuis 20ans sur la compétence, la créativité et le professionnalisme de ses équipes d’ingénieurs et de techniciens pour vous accompagner dans l’étude et la réalisation de tous les projets de développement miniers et industriels. Nous comptons également sur une collaboration étroite avec un large réseau d’experts externes pour certains projets.
-                            </p>
-                        </article>
-                        <article class="el-right">
-                            <p class="el-paragraphe">
-                                <strong>DANS LA POURSUITE D’OR</strong>
-
-                            </p>
-                            <p class="el-paragraphe">
-                                Au-delà du Maroc, <strong>DANS LA POURSUITE D’</strong>
-                                a entamé une expansion sur le continent Africain, en commençant par la Mauritanie Soudan et prochainement en Guinée…. Avec des installations partiels jusqu’à des solutions clé en main.
-                            </p>
-                            <p class="el-paragraphe">
-                                Avec ses partenaires et ses experts les plus expérimentés au Maroc, nous avons commencer une vision d’indépendance pour la fabrication et la conception de nos solutions avec un prix et une qualité très Compétitifs.
-                            </p>
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- FIN INSTALLATION CLE EN MAIN -->
-
-        <!-- REALISATIONS -->
         <section id="el-realisation" class="el-center-box">
             <div class="el-content-area">
                 <h2 class="el-title">nos réalisations</h2>
@@ -118,20 +163,7 @@
                 </div>
             </div>
         </section>
-        <!-- FIN REALISATIONS -->
 
-        <!-- BANNER CTA -->
-        <section class="el-banner-cta" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
-                </div>
-            </div>
-        </section>
-        <!-- FIN BANNER CTA -->
-
-        <!-- FOOTER -->
         <footer id="el-footer-page" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-top">
@@ -172,9 +204,7 @@
                 </p>
             </div>
         </footer>
-        <!-- FIN FOOTER -->
     </div>
-    <!-- FIN PAGE -->
 
     <!-- JQUERY -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
