--- a/installation-cle-en-main.html
+++ b/installation-cle-en-main.html
@@ -12,32 +12,72 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     
     <div id="el-page">
 
-        <!-- HEADER -->
         <header id="el-header-page">
-            <a href="" class="el-logo">
-                <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
-            </a>
-            <ul class="el-container">
-                <li>
-                    <a href="" class="el-center-box">
-                        <i class="fas fa-search"></i>
-                    </a>
-                </li>
-                <li>
-                    <button class="el-center-box">
-                        <i class="fas fa-bars"></i>
-                    </button>
-                </li>
-            </ul>
+            <section id="el-top" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <div class="el-container">
+                            <ul class="el-langages">
+                                <li><a href=""><img src="https://flagcdn.com/ma.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/gb.svg" alt=""></a></li>
+                                <li><a href=""><img src="https://flagcdn.com/fr.svg" alt=""></a></li>
+                            </ul>
+                            <ul class="el-social-network">
+                                <li><a href="https://www.facebook.com/" class="el-center-box"><i class="fab fa-facebook-f"></i></a></li>
+                                <li><a href="https://www.linkedin.com/" class="el-center-box"><i class="fab fa-instagram"></i></a></li>
+                                <li><a href="https://www.instagram.com/" class="el-center-box"><i class="fab fa-linkedin-in"></i></a></li>
+                                <li><a href="mailto:alamitec@contact.ma" class="el-center-box"><i class="fab fa-vk"></i></a></li>
+                            </ul>
+                        </div>
+                        <ul class="el-container-two">
+                            <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-globe-africa"></i>contact@alamitec.ma</a></li>
+                            <li><a href="tel:+212522537340"><i class="fas fa-phone"></i>(+212) 522 537 340</a></li>
+                            <li><a href="tel:+212522537341"><i class="fas fa-phone"></i>(+212) 522 537 341</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </section>
+            <section id="el-bottom" class="el-center-box">
+                <div class="el-content-area">
+                    <div class="el-grid">
+                        <a href="" class="el-logo">
+                            <img src="./assets/images/logo-alamitec.jpg" alt="ALAMITEC">
+                        </a>
+                        <ul class="el-container">
+                            <li>
+                                <a href="" class="el-center-box">
+                                    <i class="fas fa-search"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <button class="el-center-box">
+                                    <i class="fas fa-bars"></i>
+                                </button>
+                            </li>
+                        </ul>
+                        <nav>
+                            <ul id="el-menu-desktop">
+                                <li><a href="" class="el-menu-level-one">accueil</a></li>
+                                <li><a href="" class="el-menu-level-one">société<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">mines et carrières<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">machines<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">prestations<i class="fas fa-chevron-down"></i></a></li>
+                                <li><a href="" class="el-menu-level-one">pièces de rechange</a></li>
+                                <li><a href="" class="el-menu-level-one">contact</a></li>
+                                <li><a href="" class="el-center-box el-search"><i class="fas fa-search"></i></a></li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </section>
         </header>
-        <!-- FIN HEADER -->
 
-        <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
@@ -56,41 +96,51 @@
                 </div>
             </div>
         </section>
-        <!-- FIN TITLE OVERLAY -->
 
-        <!-- BANNER CTA -->
-        <section class="el-banner-cta" class="el-center-box">
+        <section id="el-presentation" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
+                <div class="el-grid-zone">
+                    <article class="el-zone-left">
+                        <div class="el-block-one">
+                            <h2 class="el-title">carrières et mines</h2>
+                            <ul class="el-container-nav">
+                                <li>
+                                    <div class="el-active el-link-category"><a href="">installation clé en main</a></div>
+                                </li>
+                                <li>
+                                    <div class="el-link-category"><a href="">installation des mines</a></div>
+                                </li>
+                            </ul>
+                        </div>
+                        <div class="el-block-two">
+                            <h2 class="el-title">catalogue alamitec</h2>
+                            <div class="el-container-nav">
+                                <a href="./assets/Catalogue-final-alamitec.pdf"><i class="fas fa-file-pdf"></i>download.pdf</a>
+                            </div>
+                        </div>
+                        <div class="el-block-three">
+                            <h2 class="el-title">contact</h2>
+                            <ul>
+                                <li><a href=""><i class="fas fa-map-marker"></i>Quartier industriel SAPINO Lot n°72- Nouaceur, Casablanca-Maroc</a></li>
+                                <li><a href="tel:+212522537340"><i class="fas fa-phone"></i> +212 522 53 73 40/41</a></li>
+                                <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-paper-plane"></i>contact@alamitec.ma</a></li>
+                                <li><a href=""><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
+                            </ul>
+                        </div>
+                    </article>
+                    <article class="el-zone-right">
+                        <h2 class="el-title">installation clé en main</h2>
+                        <p class="el-paragraphe">
+                            Portant un intérêt dans le concassage et le criblage dès le premier jour, ALAMITEC est devenue l’une des premières entreprises en ce qui concerne le traitement de granulats, et cela grâce à l’importance que nous attachons à la recherche et au développement continu dans le domaine.Nous cherchons à utiliser notre expérience et à la développer avec chaque projet. Nous sommes engagés à créer une force de travail ayant de l’expertise, à maintenir notre base de connaissance à la pointe et à développer une approche de gestion novatrice pour atteindre notre vision entrepreneuriale.
+                        </p>
+                        <p class="el-paragraphe">
+                            L’équipe ALAMITEC est capable d’identifier les besoins du client, de faire des designs personnalisés et de produire les meilleures stations pour tout environnement. De plus, nous fournissons une formation de personnel et un service après-vente selon notre objectif d’une satisfaction du client absolu.
+                        </p><br />
+                        <img src="./assets/images/ETUDE-ET-RD-5-6-copy-e1640796108440-768x200.jpg" alt="">
+                    </article>
                 </div>
             </div>
         </section>
-        <!-- FIN BANNER CTA -->
-
-        <!--  -->
-        <section id="el-installation-cle-en-main" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-container">
-                    <img src="./assets/images/Screen-Shot-2017-10-25-at-16.14.13-768x103.png" alt="">
-                    <div class="el-grid">
-                        <article class="el-left">
-                            <p class="el-paragraphe">
-                                Portant un intérêt dans le concassage et le criblage dès le premier jour, ALAMITEC est devenue l’une des premières entreprises en ce qui concerne le traitement de granulats, et cela grâce à l’importance que nous attachons à la recherche et au développement continu dans le domaine.Nous cherchons à utiliser notre expérience et à la développer avec chaque projet. Nous sommes engagés à créer une force de travail ayant de l’expertise, à maintenir notre base de connaissance à la pointe et à développer une approche de gestion novatrice pour atteindre notre vision entrepreneuriale.
-                            </p>
-                        </article>
-                        <article class="el-right">
-                            <p class="el-paragraphe">
-                                L’équipe ALAMITEC est capable d’identifier les besoins du client, de faire des designs personnalisés et de produire les meilleures stations pour tout environnement. De plus, nous fournissons une formation de personnel et un service après-vente selon notre objectif d’une satisfaction du client absolu.
-                            </p>
-                            <img src="./assets/images/ETUDE-ET-RD-5-6-copy-e1640796108440-768x200.jpg" alt="">
-                        </article>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- FIN  -->
 
         <section id="el-realisation" class="el-center-box">
             <div class="el-content-area">
@@ -106,15 +156,6 @@
                     <img src="./assets/images/realisations/8.jpg" alt="" />
                     <img src="./assets/images/realisations/9.jpg" alt="" />
                     <img src="./assets/images/realisations/10.jpg" alt="" />
-                </div>
-            </div>
-        </section>
-
-        <section class="el-banner-cta" class="el-center-box">
-            <div class="el-content-area">
-                <div class="el-grid">
-                    <h2>de l'idée, du plan à la solution finale</h2>
-                    <a href="" class="el-cta">contactez-nous</a>
                 </div>
             </div>
         </section>
