--- a/installation-cle-en-main_old.html
+++ b/installation-cle-en-main_old.html
@@ -12,12 +12,12 @@
     <!-- CUSTOM -->
     <link rel="stylesheet" href="./assets/css/element.css">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/responsive.css">
 </head>
 <body>
     
     <div id="el-page">
 
+        <!-- HEADER -->
         <header id="el-header-page">
             <section id="el-top" class="el-center-box">
                 <div class="el-content-area">
@@ -77,117 +77,86 @@
                 </div>
             </section>
         </header>
+        <!-- FIN HEADER -->
 
+        <!-- TITLE OVERLAY -->
         <section id="el-title-overlay" class="el-center-box">
             <div class="el-content-area">
                 <div class="el-card">
-                    <img src="./assets/images/anniversaire.jpg" alt="" class="el-img">
-                    <h1>nouveautés</h1>
+                    <img src="./assets/images/cmpe-2.jpg" alt="" class="el-img">
+                    <h1>installation clé en main</h1>
                     <div class="el-content">
                         <h2><i class="fas fa-circle"></i>you are here:</h2>
                         <div>
                             <a href="">home</a>
                             <i class="fas fa-chevron-right"></i>
-                            <span>nouveautés</span>
+                            <span>services</span>
+                            <i class="fas fa-chevron-right"></i>
+                            <span>installation clé en main</span>
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        <!-- FIN TITLE OVERLAY -->
 
-        <section id="el-presentation" class="el-center-box">
+        <!-- BANNER CTA -->
+        <section class="el-banner-cta" class="el-center-box">
             <div class="el-content-area">
-                <div class="el-grid-zone el-reverse">
-                    <article class="el-zone-left">
-                        <div class="el-block-one">
-                            <h2 class="el-title">société</h2>
-                            <ul class="el-container-nav">
-                                <li>
-                                    <div class="el-link-category"><a href="">présentation</a></div>
-                                </li>
-                                <li>
-                                    <div class="el-link-category"><a href="">nos partenaires</a></div>
-                                </li>
-                                <li>
-                                    <div class="el-active el-link-category"><a href="">actualités de l'entreprise</a></div>
-                                </li>
-                            </ul>
-                        </div>
-                        <div class="el-block-two">
-                            <h2 class="el-title">catalogue alamitec</h2>
-                            <div class="el-container-nav">
-                                <a href="./assets/Catalogue-final-alamitec.pdf"><i class="fas fa-file-pdf"></i>download.pdf</a>
-                            </div>
-                        </div>
-                        <div class="el-block-three">
-                            <h2 class="el-title">contact</h2>
-                            <ul>
-                                <li><a href=""><i class="fas fa-map-marker"></i>Quartier industriel SAPINO Lot n°72- Nouaceur, Casablanca-Maroc</a></li>
-                                <li><a href="tel:+212522537340"><i class="fas fa-phone"></i> +212 522 53 73 40/41</a></li>
-                                <li><a href="mailto:contact@alamitec.ma"><i class="fas fa-paper-plane"></i>contact@alamitec.ma</a></li>
-                                <li><a href=""><i class="fas fa-clock"></i>Lun - Ven: 9:00 - 18:00</a></li>
-                            </ul>
-                        </div>
-                    </article>
-                    <article class="el-zone-right">
-                        <h2 class="el-title">company news</h2>
-                        <div class="el-grid-news">
-                            <article class="el-new">
-                                <div class="el-boxImg">
-                                    <a href="">
-                                        <img src="./assets/images/news/1.jpg" alt="" class="el-img">
-                                    </a>
-                                </div>
-                                <h2><a href="">cribles alamitec « lion screen »</a></h2>
-                                <p class="el-paragraphe">
-                                    Les cribles vibrants à balourd marque ALAMITEC sont des cribles à vibration circulaire de conception particulièrement robuste; par leur longévité [...]
-                                </p>
-                                <div class="el-footer">
-                                    <legend>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        2 novembre 2015
-                                    </legend>
-                                    <p class="el-paragraphe">Commentaires fermés</p>
-                                </div>
-                            </article>
-                            <article class="el-new">
-                                <div class="el-boxImg">
-                                    <a href="">
-                                        <img src="./assets/images/news/1.jpg" alt="" class="el-img">
-                                    </a>
-                                </div>
-                                <h2><a href="">cribles alamitec « lion screen »</a></h2>
-                                <p class="el-paragraphe">
-                                    Les cribles vibrants à balourd marque ALAMITEC sont des cribles à vibration circulaire de conception particulièrement robuste; par leur longévité [...]
-                                </p>
-                                <div class="el-footer">
-                                    <legend>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        2 novembre 2015
-                                    </legend>
-                                    <p class="el-paragraphe">Commentaires fermés</p>
-                                </div>
-                            </article>
-                            <article class="el-new">
-                                <div class="el-boxImg">
-                                    <a href="">
-                                        <img src="./assets/images/news/1.jpg" alt="" class="el-img">
-                                    </a>
-                                </div>
-                                <h2><a href="">cribles alamitec « lion screen »</a></h2>
-                                <p class="el-paragraphe">
-                                    Les cribles vibrants à balourd marque ALAMITEC sont des cribles à vibration circulaire de conception particulièrement robuste; par leur longévité [...]
-                                </p>
-                                <div class="el-footer">
-                                    <legend>
-                                        <i class="fas fa-calendar-alt"></i>
-                                        2 novembre 2015
-                                    </legend>
-                                    <p class="el-paragraphe">Commentaires fermés</p>
-                                </div>
-                            </article>
-                        </div>
-                    </article>
+                <div class="el-grid">
+                    <h2>de l'idée, du plan à la solution finale</h2>
+                    <a href="" class="el-cta">contactez-nous</a>
+                </div>
+            </div>
+        </section>
+        <!-- FIN BANNER CTA -->
+
+        <!--  -->
+        <section id="el-installation-cle-en-main" class="el-center-box">
+            <div class="el-content-area">
+                <div class="el-container">
+                    <img src="./assets/images/Screen-Shot-2017-10-25-at-16.14.13-768x103.png" alt="">
+                    <div class="el-grid">
+                        <article class="el-left">
+                            <p class="el-paragraphe">
+                                Portant un intérêt dans le concassage et le criblage dès le premier jour, ALAMITEC est devenue l’une des premières entreprises en ce qui concerne le traitement de granulats, et cela grâce à l’importance que nous attachons à la recherche et au développement continu dans le domaine.Nous cherchons à utiliser notre expérience et à la développer avec chaque projet. Nous sommes engagés à créer une force de travail ayant de l’expertise, à maintenir notre base de connaissance à la pointe et à développer une approche de gestion novatrice pour atteindre notre vision entrepreneuriale.
+                            </p>
+                        </article>
+                        <article class="el-right">
+                            <p class="el-paragraphe">
+                                L’équipe ALAMITEC est capable d’identifier les besoins du client, de faire des designs personnalisés et de produire les meilleures stations pour tout environnement. De plus, nous fournissons une formation de personnel et un service après-vente selon notre objectif d’une satisfaction du client absolu.
+                            </p>
+                            <img src="./assets/images/ETUDE-ET-RD-5-6-copy-e1640796108440-768x200.jpg" alt="">
+                        </article>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FIN  -->
+
+        <section id="el-realisation" class="el-center-box">
+            <div class="el-content-area">
+                <h2 class="el-title">nos réalisations</h2>
+                <div class="owl-carousel">
+                    <img src="./assets/images/realisations/1.jpg" alt="" />
+                    <img src="./assets/images/realisations/2.jpg" alt="" />
+                    <img src="./assets/images/realisations/3.jpg" alt="" />
+                    <img src="./assets/images/realisations/4.jpg" alt="" />
+                    <img src="./assets/images/realisations/5.jpg" alt="" />
+                    <img src="./assets/images/realisations/6.jpg" alt="" />
+                    <img src="./assets/images/realisations/7.jpg" alt="" />
+                    <img src="./assets/images/realisations/8.jpg" alt="" />
+                    <img src="./assets/images/realisations/9.jpg" alt="" />
+                    <img src="./assets/images/realisations/10.jpg" alt="" />
+                </div>
+            </div>
+        </section>
+
+        <section class="el-banner-cta" class="el-center-box">
+            <div class="el-content-area">
+                <div class="el-grid">
+                    <h2>de l'idée, du plan à la solution finale</h2>
+                    <a href="" class="el-cta">contactez-nous</a>
                 </div>
             </div>
         </section>
